--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -38,7 +38,7 @@ body{
     position: absolute;
     bottom: 0;
     width: 100%;
-    /* Set the fixed height of ther footer here */
+    /* Set the fixed height of the footer here */
     height: 60px;
     background-color: #000;
     .container {
